syntax = "proto3";
package pb;

message Message {

    string id = 1;

    // address of source member who sent this message
    string address = 2;

    oneof payload {
        Ping ping = 3;
        Ack ack = 4;
        Nack nack = 5;
        IndirectPing indirect_ping = 6;
        Membership membership = 7;
    }

    PiggyBack piggyBack = 8;
}

message Ping {

}

message Ack {
    string payload = 2;
}

message Nack {

}

message IndirectPing {
    // indirect-ping's target address
    string target = 2;
    bool nack = 3;
}

message PiggyBack {
    MbrStatsMsg mbrStatsMsg = 1;
}

// Membership has a list of Member status messages
message Membership {
    string senderId = 1;
    string senderUdpAddress = 2;
    string senderTcpAddress = 3;
    repeated MbrStatsMsg mbrStatsMsgs = 4;
}

// Member status message
message MbrStatsMsg {

    // status
    // 0 - Alive, 1 - Suspect, 2 - Confirm
    enum Type {
        Alive = 0;
        Suspect = 1;
        Confirm = 2;
    }

    Type type = 1;

    string id = 2;

    uint32 incarnation = 3;

    string udpAddress = 4;

    string tcpAddress = 5;

}